# itspankaj

./: .env  .gitignore  Cargo.toml  README.md  meson.build
migrations/2022-06-01-164129_create_users/: down.sql  up.sql
src/: main.rs  meson.build  models.rs
static/templates/: index.html
