[package]
name = "basic2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
handlebars = { version = "*", features = ["dir_source"] }
diesel = { version = "*", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
